--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -4,7 +4,7 @@ BUILD_DIR ?= ./build
 INC_DIRS := ./include
 SRC_DIRS ?= ./src
 
-CC := mpicc
+CC := mpic++
 
 SRCS := $(shell find $(SRC_DIRS) -name *.cpp -or -name *.c -or -name *.s)
 OBJS := $(SRCS:%=$(BUILD_DIR)/%.o)
@@ -13,12 +13,12 @@ DEPS := $(OBJS:.o=.d)
 INC_FLAGS := $(addprefix -I , $(INC_DIRS))
 LDFLAGS := $(shell $(CC) -showme:link)
 
-CFLAGS := $(INC_FLAGS) --std=c99 -g -Wall
+CFLAGS := $(INC_FLAGS) --std=c++11 -g -Wall
 
 $(BUILD_DIR)/$(TARGET_EXEC): $(OBJS)
 		$(CC) $(OBJS) -o $@ $(LDFLAGS)
 
-$(BUILD_DIR)/%.c.o: %.c
+$(BUILD_DIR)/%.cpp.o: %.cpp
 	$(MKDIR_P) $(dir $@)
 	$(CC) $(CFLAGS) -c $< -o $@
 
